Fix drawer on smaller screens to account for smaller nav

--- a/src/scss/mixins/_drawer.scss
+++ b/src/scss/mixins/_drawer.scss
@@ -22,7 +22,7 @@
     transform: translateY(-100%);
 
     &.active {
-      top: 80px;
+      top: 62px;
       transform: translateY(0);
 
       @media (min-width: $break-md) {
@@ -44,7 +44,7 @@
     transform: translateY(100%);
 
     &.active {
-      top: 80px;
+      top: 62px;
       transform: translateY(0);
 
       @media (min-width: $break-md) {
